syntax = "proto3";

package compute;

option java_package = "seproject.proto";
option java_multiple_files = true;

service ComputeService {
  rpc StartComputation (ComputationRequest) returns (ComputationResponse);
}

message ComputationRequest {
  repeated int32 numbers = 1;
  string output_path = 2;
  string delimiter = 3;
}

message ComputationResponse {
  bool success = 1;
  string message = 2;
  repeated int32 results = 3;
  bool unknown = 4; 
}